# PubChemAgent

./: .gitignore  INSTALL.md  LICENSE  MANIFEST.in  README.md  config.toml  example.py  pyproject.toml  streamlit_app.py
pubchem_agent/: __init__.py  agent.py  cli.py  config.py  tools.py
tests/: __init__.py  test_agent.py
